--- a/Java Tutorial/WebContent/WEB-INF/web.xml
+++ b/Java Tutorial/WebContent/WEB-INF/web.xml
@@ -2,6 +2,31 @@
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd" id="WebApp_ID" version="4.0">
   <display-name>Java Tutorial</display-name>
   <welcome-file-list>
-    <welcome-file>index.html</welcome-file>
+    <welcome-file>index.jsp</welcome-file>
   </welcome-file-list>
+  <error-page>
+  <exception-type>javax.servlet.jsp.jspException</exception-type>
+  <location>/ErrorPage.jsp</location>
+  </error-page>
+  <error-page>
+  <exception-type>java.lang.Exception</exception-type>
+  <location>/ErrorPage.jsp</location>
+  </error-page>
+ 
+  <context-param>
+    <param-name>email-address</param-name>
+    <param-value>kumar20.amitsingh@gmail.com</param-value>
+  </context-param>
+  <jsp-config>
+  <jsp-property-group>
+    <url-pattern>*.jsp</url-pattern>
+  	<include-prelude>ConcurrentUser.jsp</include-prelude>
+  </jsp-property-group>
+  </jsp-config>
+  <listener>
+  <listener-class>learning.ConcurrentUser</listener-class>
+  </listener>
+  <listener>
+  <listener-class>learning.SiteLogger</listener-class>
+  </listener>
 </web-app>
